[package]
name = "raytracer"
version = "0.1.0"
authors = ["Dennis Sprokholt"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "raytracer-debug"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.70"
roots        = "0.0.4"
packed_simd  = { version = "0.3.4", package = "packed_simd_2" }

[profile.release]
lto = true

[profile.dev]
lto = true
opt-level = 3
